"Notes" for footnotes was not aligning correctly. Fixed to centered.

--- a/source/stylesheets/blog/layout.css.sass
+++ b/source/stylesheets/blog/layout.css.sass
@@ -298,6 +298,7 @@ section
 						margin:
 							top: golden-ratio(1em, 2)
 							bottom: golden-ratio(1em, 0)
+						text-align: center
 
 #comments
 	@include singleton-size
